OY-401 Fix header on narrow screen

--- a/src/components/greeting/Greeting.css
+++ b/src/components/greeting/Greeting.css
@@ -18,7 +18,6 @@
 }
 
 :local(.guest-header) {
-  line-height: 1px;
 }
 
 :local(.guest-greeting) {
